# csv-splitter

./: .gitignore  README.md  hello.py  pyproject.toml
src/: config.py  file_pipeline.py  file_processing.py  file_reading.py  file_writing.py  main.py
tests/: test_file_processing.py  test_file_reading.py
